# cppscript

./: CMakeLists.txt  README.md
example/demo/: main.cpp
include/cppscript/: assert.h  compiler.h  context.h  cppscript.h  debug.h  interpreter.h  operator.h  script.h  thread.h  variable.h
include/cppscript/detail/: operator.h
source/: ask_python.cpp  assert.cpp  compiler.cpp  context.cpp  cppscript.cpp  interpreter.cpp  operator.cpp  script.cpp  thread.cpp  variable.cpp  why.cpp
